<resources>
    <string name="app_name">Flex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flex">flex</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign-Up.</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="ekart_logistics">Ekart Logistics</string>
    <string name="_20_aug_9_am_4_hours">20-Aug, 9 am | 4 hours</string>
    <string name="baramunda_bhubaneswar">Baramunda, Bhubaneswar</string>
    <string name="please_report_30_minutes_before_your_slot_timings">Please report 30 minutes before your slot timings.</string>
    <string name="booking_failed">Booking Failed</string>
    <string name="todo">TODO</string>
    <string name="please_try_again_after_some_time">Please try again after some time !</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="website">Website</string>
    <string name="office_hours">Office hours</string>
    <string name="license_details">License Details</string>
    <string name="license_number">License Number</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="license_s_issue_date">License\'s Issue Date</string>
    <string name="license_s_expiry_date">License\'s Expiry Date</string>
    <string name="license_details_submitted">License Details Submitted</string>
    <string name="to_see_your_license_details_tap_on_the_icon_below_you_can_edit_your_details_anytime_by_filling_license_details_again">To see your license details tap on the icon below. You can edit your details anytime by filling license details again.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="delivering_jobs">Delivering Jobs</string>
    <string name="flex_v_2_1">flex V.2.1</string>
    <string name="this_app_has_no_connection_with_companies_which_give_delivery_jobs_it_only_connects_people_with_companies_who_are_looking_for_part_time_delivery_jobs_and_is_not_responsible_for_payment_and_other_issues_it_is_not_an_official_app">This app has no connection with companies which give delivery jobs. It only connects people with companies who are looking for part-time delivery jobs and is not responsible for payment and other issues. It is not an official app.</string>
    <string name="about_us">About us</string>
    <string name="sahil_kumar_nayak">Sahil Kumar Nayak</string>
    <string name="gyaneswar_singh">Gyaneswar Singh</string>
    <string name="sudhansu_sekhar_sahoo">Sudhansu Sekhar Sahoo</string>
    <string name="gmail">Gmail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="_91_7978753612">+91-7978753612</string>
    <string name="_91_9348075636">+91-9348075636</string>
    <string name="_91_9937340986">+91-9937340986</string>
    <string name="_91_7008825084">+91-7008825084</string>
    <string name="surajsahoo329bbsr_gmail_com">surajsahoo329bbsr@gmail.com</string>
    <string name="sahilnayak101_gmail_com">sahilnayak101@gmail.com</string>
    <string name="gyaneswarsingh53_gmail_com">gyaneswarsingh53@gmail.com</string>
    <string name="hapi181096_gmail_com">hapi181096@gmail.com</string>
    <string name="bhubaneswar_odisha">Bhubaneswar, Odisha</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="upload_license">Upload License</string>
    <string name="download_license">Download License</string>
    <string name="submit">Submit</string>
    <string name="view_license_details">View License Details</string>
    <string name="how_will_you_rate_our_app">How will you rate our App ?</string>
    <string name="please_rate_our_app">Please rate our app !</string>
    <string name="we_are_waiting">We are waiting !</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="view_feedback">View Feedback</string>
    <string name="your_review">Your Review</string>
    <string name="book_your_slot">Book your slot</string>
    <string name="choose_date">Choose date</string>
    <string name="book">Book</string>
    <string name="delete_acc">Delete Acc.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="app_version_2_1_0">App Version 2.1.0</string>
    <string name="about">About</string>
    <string name="link">https://github.com/surajsahoo329/Flex-Vendor</string>
    <string name="driving_license">Driving License</string>
    <string name="contacts">Contacts</string>
    <string name="you_have_not_booked_any_slot_yet">You have not booked any slot yet</string>
    <string name="active_slot">Active Slot</string>
    <string name="oops">Oops</string>
    <string name="your_history">Your History</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="_11_aug_9_am_4_hours">11-Aug, 9 am | 4 hours</string>
    <string name="profile">Profile</string>
    <string name="your_slots">Your Slots</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="booking">Booking</string>
    <string name="didn_t_receive_reset_password_link_please_try_again">Didn\'t receive reset password link? Please try again.</string>
    <string name="don_t_worry_just_give_us_your_registered_email_address_and_we_will_send_you_a_reset_password_link_shortly">Don\'t worry. Just give us your registered email address and we will send you a reset password link shortly.</string>
    <string name="please_enter_your_password_again_for_verification">Please enter your password again for verification</string>
    <string name="app_developers">App developers</string>
    <string name="flex_vendor">flex vendor</string>
    <string name="company_id">Company ID</string>
    <string name="slots">Slots</string>
    <string name="users">Company</string>
    <string name="courier">Courier</string>
    <string name="your_company">Your Company</string>
    <string name="app_version_1_0_0">App Version 1.0.0</string>
    <string name="please_check_driving_license">Please check driving license</string>
    <string name="tap_here_to_view_driving_license">Tap here to view driving license</string>
    <string name="suraj_kumar_sahoo">Suraj Kumar Sahoo</string>
    <string name="_91_7978756312">+91-7978756312</string>
    <string name="upcoming">Upcoming</string>
    <string name="payment">Payment</string>
    <string name="suraj_okici">suraj@okici</string>
    <string name="type_your_note_here">Type your note here</string>
    <string name="pay">Pay</string>
    <string name="u20b9_0_00">0.00</string>
    <string name="u20b9">₹</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="u20b9_40_00">₹ 40.00</string>
    <string name="_10_may_2020_12_45_23_pm">10-May-2020, 12:45:23 PM</string>
</resources>

