<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/nav_slots"
            android:icon="@drawable/ic_slots"
            android:title="@string/slots" />

        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_company"
            android:title="@string/your_company" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/profile" />


        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts"
            />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"
            />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out"
            />
    </group>
</menu>