<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.flex.ContactsFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/contacts"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_img_phone"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/ivGmail"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:src="@drawable/ic_gmail"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/ivWhatsapp"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_whatsapp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tvCall"
            android:layout_width="80dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/tvGmail"
            android:layout_width="80dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:textColor="#000"
            android:text="@string/gmail"
            />

        <TextView
            android:id="@+id/tvWhatsapp"
            android:layout_width="80dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/whatsapp"
            />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/phone"
            android:textColor="#000"
            android:textStyle="bold" />



    <TextView
        android:id="@+id/tvAltPhone3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/_91_7978753612"
        android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAltEmail3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000"
        android:text="@string/surajsahoo329bbsr_gmail_com"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/location"
            android:textColor="#000"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bhubaneswar_odisha"
        />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>
</ScrollView>