<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/payment"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/ivUserPhoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_name"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/invisibleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:visibility="gone" />

        <TextView
            android:id="@+id/invisibleUpiId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tvNamePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivUserPhoto"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/ivUserPhoto"
            android:layout_toRightOf="@+id/ivUserPhoto"
            android:text="@string/suraj_kumar_sahoo"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPhonePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivUserPhoto"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/ivUserPhoto"
            android:layout_toRightOf="@+id/ivUserPhoto"
            android:text="@string/_91_7978756312"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTimingsPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivUserPhoto"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="-30dp"
            android:layout_toEndOf="@+id/ivUserPhoto"
            android:layout_toRightOf="@+id/ivUserPhoto"
            android:text="@string/_11_aug_9_am_4_hours"
            android:textColor="#000"
            android:textSize="16sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tvUpiIdPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/suraj_okici"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:text="@string/u20b9"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etMoneyPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/u20b9_0_00"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etNotePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/type_your_note_here"
        android:padding="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybutton"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>
