<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">


<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.flex.AboutFragment">

    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="start"
        android:text="@string/about"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="start"
        android:text="@string/app_version_1_0_0"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000"
        android:layout_gravity="center"
        android:text="@string/this_app_has_no_connection_with_companies_which_give_delivery_jobs_it_only_connects_people_with_companies_who_are_looking_for_part_time_delivery_jobs_and_is_not_responsible_for_payment_and_other_issues_it_is_not_an_official_app" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/app_developers"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000"
        android:text="@string/suraj_kumar_sahoo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autoLink="web"
        android:text="@string/link"
        android:textColorLink="#000" />

</LinearLayout>
</ScrollView>