<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">

 <LinearLayout
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/tvFont"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:text="@string/flex_vendor"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/multilinetext_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
         />

     <Space
         android:layout_width="wrap_content"
         android:layout_height="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/etPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:drawableStart="@drawable/ic_password"
           android:drawableLeft="@drawable/ic_password"
           android:drawablePadding="5dp"
           android:ems="10"
           android:background="@drawable/multilinetext_bg"
            android:hint="@string/password"
           android:inputType="textPassword" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:background="@drawable/mybutton"
        android:textColor="#ffffff"
        android:text="@string/login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/forgot_password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/don_t_have_an_account_sign_up" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />
</LinearLayout>
</ScrollView>