<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".BookingConfirmedActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <TextView
            android:id="@+id/bookingConfirmedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/payment_successful"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_confirmed_tick" />

        <TextView
            android:id="@+id/showPaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text="@string/u20b9_40_00"
            android:textColor="#000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/showPaymentDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40sp"
            android:text="@string/_10_may_2020_12_45_23_pm"
            android:textColor="#000"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>