<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassTitle"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="@string/forgot_password"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/don_t_worry_just_give_us_your_registered_email_address_and_we_will_send_you_a_reset_password_link_shortly"
        android:textColor="#000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:background="@drawable/multilinetext_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        />


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btnChPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/mybutton"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/tvTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/didn_t_receive_reset_password_link_please_try_again"
        android:textColor="#000"
        android:visibility="gone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>
</ScrollView>